--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
         "core-js": "^2.5.5",
         "font-awesome": "^4.7.0",
         "ng2-charts": "^1.6.0",
+        "ngx-owl-carousel": "^2.0.7",
         "rxjs": "^6.1.0",
+        "script-loader": "^0.7.2",
         "yarn": "^1.6.0",
         "zone.js": "^0.8.26"
     },
